--- a/Working Group Vibe/GroupGrindr/Group_Members.xaml
+++ b/Working Group Vibe/GroupGrindr/Group_Members.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Group_Members">
 
-    <Grid Background="WhiteSmoke">
+    <Grid Background="WhiteSmoke" Name="MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="3*"/>
             <RowDefinition Height="2*"/>
@@ -39,7 +39,6 @@
         <Image x:Name="Logo" Source="Default_Images/budge1.jpg" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0"/>
 
         <Rectangle x:Name="Members_Backbar" Grid.Row="1" Grid.Column="2" Fill="White" Grid.RowSpan="1"/>
-        <TextBlock x:Name="Example_User_Text" Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20">Extend this (show all)</TextBlock>
 
     </Grid>
 </Page>
