--- a/Working Group Vibe/GroupGrindr/Create_Group_Page.xaml
+++ b/Working Group Vibe/GroupGrindr/Create_Group_Page.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="1080" d:DesignWidth="1920"
       Title="Create_Group_Page">
 
-    <Grid x:Name="MainGrid" Background="White">
+    <Grid x:Name="MainGrid" Background="WhiteSmoke">
         <Grid.RowDefinitions>
             <RowDefinition Height="2.5*"/>
             <RowDefinition Height="0.5*"/>
@@ -43,6 +43,7 @@
 
         <TextBlock Grid.Row="7" Grid.Column="1" Text="Description" FontSize="30"/>
         <TextBox x:Name="Group_Description" Grid.Row="8" Grid.Column="1" Margin="5" Grid.RowSpan="6"/>
+        <TextBox x:Name="Group_Members" Grid.Column="3" Margin="0.5,10.5,0,196" Grid.Row="5" Grid.RowSpan="10" />
 
         <Button x:Name="Confirm_CreateGroup" Click="Confirm_CreateGroup_Click" Grid.Row="14" Grid.Column="1" Margin="50" Content="Create Group" FontSize="40"/>
 
