--- a/Working Group Vibe/GroupGrindr/Group_Details.xaml
+++ b/Working Group Vibe/GroupGrindr/Group_Details.xaml
@@ -20,26 +20,26 @@
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="0.5*"/>
-            <ColumnDefinition Width="2.5*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="101*"/>
+            <ColumnDefinition Width="71*"/>
+            <ColumnDefinition Width="561*"/>
+            <ColumnDefinition Width="71*"/>
         </Grid.ColumnDefinitions>
-        
+
         <Rectangle x:Name="MenuBar" Grid.Column="0" Grid.Row="0" Grid.RowSpan="8" Fill="MediumAquamarine"/>
-        <Button x:Name="Details" Click="Details_Click" Grid.Column="0" Grid.Row="1" Content="Details" Background="DarkTurquoise" FontSize="20" VerticalAlignment="Stretch"/>
-        <Button x:Name="Tasks" Click="Tasks_Click_1" Grid.Column="0" Grid.Row="2" Content="Tasks" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
-        <Button x:Name="Members" Click="Members_Click" Grid.Column="0" Grid.Row="4" Content="Members" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
-        <Button x:Name="Files" Click="Files_Click" Grid.Column="0" Grid.Row="3" Content="Files" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
-        <Button x:Name="Menu" Click="Menu_Click" Grid.Column="0" Grid.Row="6" Content="Menu" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
+        <Button x:Name="Details" Click="Details_Click" Grid.Column="0" Grid.Row="1" Content="Details" Background="DarkTurquoise" FontSize="20" VerticalAlignment="Stretch" Margin="0,0.5"/>
+        <Button x:Name="Tasks" Click="Tasks_Click_1" Grid.Column="0" Grid.Row="2" Content="Tasks" Background="Transparent" FontSize="20" VerticalAlignment="Stretch" Margin="0,0,0,0" Grid.RowSpan="1"/>
+        <Button x:Name="Members" Click="Members_Click" Grid.Column="0" Grid.Row="4" Content="Members" Background="Transparent" FontSize="20" VerticalAlignment="Stretch" Margin="0,0,0,0" Grid.RowSpan="1"/>
+        <Button x:Name="Files" Click="Files_Click" Grid.Column="0" Grid.Row="3" Content="Files" Background="Transparent" FontSize="20" VerticalAlignment="Stretch" Margin="0,0.5"/>
+        <Button x:Name="Menu" Click="Menu_Click" Grid.Column="0" Grid.Row="6" Content="Menu" Background="Transparent" FontSize="20" VerticalAlignment="Stretch" Margin="0,0,0,0" Grid.RowSpan="1"/>
 
-        <Image x:Name="ProfileIcon" Source="Default_Images/default_profile_icon.png" VerticalAlignment="Stretch" Grid.Column="0" Grid.Row="8" />
-        <Button x:Name="Profile" Click="Profile_Click" Grid.Column="0" Grid.Row="8" Content="" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
-        <Image x:Name="Logo" Source="Default_Images/budge1.jpg" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0"/>
+        <Image x:Name="ProfileIcon" Source="Default_Images/default_profile_icon.png" VerticalAlignment="Stretch" Grid.Column="0" Grid.Row="7" />
+        <Button x:Name="Profile" Click="Profile_Click" Grid.Column="0" Grid.Row="7" Content="" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
+        <Image x:Name="Logo" Source="Default_Images/budge1.jpg" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Margin="0,0,0,0" Grid.RowSpan="1"/>
 
-        <TextBlock x:Name="Group_Name_Text" Text="" HorizontalAlignment="Right" FontSize="40" Margin="10" Grid.Column="3" Background="Transparent"/>
-        <TextBlock x:Name="Group_ID_Text" Text="" HorizontalAlignment="Right" FontSize="30" Margin="10" Grid.Column="2" Grid.Row="0" VerticalAlignment="Bottom" Background="Transparent"></TextBlock>
-        <TextBlock x:Name="Group_Description_Text" Text="" HorizontalAlignment="Center" FontSize="15" Margin="10" Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2" Grid.RowSpan="5" Background="Transparent"></TextBlock>
-        
+        <TextBlock x:Name="Group_Name_Text" Text="" FontSize="40" Margin="75,0.5,75,0" Grid.Column="2" Background="White" RenderTransformOrigin="0.5,0.5" Grid.Row="1" TextAlignment="Center"/>
+        <TextBlock x:Name="Group_ID_Text" Text="" FontSize="30" Margin="74.5,9.5,80.5,3.5" Grid.Column="2" Grid.Row="2" Background="Transparent" TextAlignment="Center" />
+        <TextBlock x:Name="Group_Description_Text" Text="" FontSize="15" Margin="54.5,1.5,52.5,0" Grid.Column="2" Grid.RowSpan="4" Background="White" Grid.Row="3" TextAlignment="Center"/>
+
     </Grid>
 </Page>
