--- a/Working Group Vibe/GroupGrindr/Group_Files.xaml
+++ b/Working Group Vibe/GroupGrindr/Group_Files.xaml
@@ -38,10 +38,10 @@
 
         <Image x:Name="ProfileIcon" Source="Default_Images/default_profile_icon.png" VerticalAlignment="Stretch" Grid.Column="0" Grid.Row="7" Margin="0,0,1,0" />
         <Button x:Name="Profile" Grid.Column="0" Grid.Row="7" Content="" Background="Transparent" FontSize="20" VerticalAlignment="Stretch" Margin="0,0,1,0"/>
-        <Image x:Name="Logo" Source="Default_Images/budge1.jpg" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Margin="0,0,1,4.5"/>
+        <Image x:Name="Logo" Source="Default_Images/budge1.jpg" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Margin="0,0,0,0" Grid.RowSpan="1"/>
 
-        <Button x:Name="Upload" Grid.Column="3" Margin="0,5.5,0,4" Grid.Row="5" Content="Upload" Click="button1_Click" />
-        <TextBox x:Name="textBox1" Grid.Column="2" Margin="55,29,61,0" Grid.RowSpan="5" Grid.ColumnSpan="4" Height="253" VerticalAlignment="Top" />
+        <Button x:Name="Upload" Grid.Column="3" Margin="49,0.5,49,10.5" Grid.Row="5" Content="Upload" Click="button1_Click" Grid.ColumnSpan="2" />
+        <TextBlock x:Name="textBox1" Grid.Column="2" Margin="58,34,58,4.5" Grid.RowSpan="5" Grid.ColumnSpan="4" TextWrapping="Wrap" TextAlignment="Center" Background="White" />
 
     </Grid>
 </Page>
