--- a/Working Group Vibe/GroupGrindr/Group_Members.xaml
+++ b/Working Group Vibe/GroupGrindr/Group_Members.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Group_Members">
 
-    <Grid Background="WhiteSmoke" Name="MainGrid">
+    <Grid  x:Name="MainGrid" Background="WhiteSmoke">
         <Grid.RowDefinitions>
             <RowDefinition Height="3*"/>
             <RowDefinition Height="2*"/>
@@ -20,25 +20,26 @@
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="0.5*"/>
-            <ColumnDefinition Width="2.5*"/>
-            <ColumnDefinition Width="2.5*"/>
-            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="101*"/>
+            <ColumnDefinition Width="69*"/>
+            <ColumnDefinition Width="286*"/>
+            <ColumnDefinition Width="286*"/>
+            <ColumnDefinition Width="58*"/>
         </Grid.ColumnDefinitions>
 
         <Rectangle x:Name="MenuBar" Grid.Column="0" Grid.Row="0" Grid.RowSpan="8" Fill="MediumAquamarine"/>
-        <Button x:Name="Details" Click="Details_Click" Grid.Column="0" Grid.Row="1" Content="Details" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
-        <Button x:Name="Tasks" Click="Tasks_Click" Grid.Column="0" Grid.Row="2" Content="Tasks" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
-        <Button x:Name="Members" Click="Members_Click" Grid.Column="0" Grid.Row="4" Content="Members" Background="DarkTurquoise" FontSize="20" VerticalAlignment="Stretch"/>
-        <Button x:Name="Files" Click="Files_Click" Grid.Column="0" Grid.Row="3" Content="Files" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
-        <Button x:Name="Menu" Click="Menu_Click" Grid.Column="0" Grid.Row="6" Content="Menu" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
+        <Button x:Name="Details" Click="Details_Click" Grid.Column="0" Grid.Row="1" Content="Details" Background="Transparent" FontSize="20" VerticalAlignment="Stretch" Margin="0,0.5"/>
+        <Button x:Name="Tasks" Click="Tasks_Click" Grid.Column="0" Grid.Row="2" Content="Tasks" Background="Transparent" FontSize="20" VerticalAlignment="Stretch" Margin="0,0,0,0" Grid.RowSpan="1"/>
+        <Button x:Name="Members" Click="Members_Click" Grid.Column="0" Grid.Row="4" Content="Members" Background="DarkTurquoise" FontSize="20" VerticalAlignment="Stretch" Margin="0,0,0,0" Grid.RowSpan="1"/>
+        <Button x:Name="Files" Click="Files_Click" Grid.Column="0" Grid.Row="3" Content="Files" Background="Transparent" FontSize="20" VerticalAlignment="Stretch" Margin="0,0.5"/>
+        <Button x:Name="Menu" Click="Menu_Click" Grid.Column="0" Grid.Row="6" Content="Menu" Background="Transparent" FontSize="20" VerticalAlignment="Stretch" Margin="0,0,0,0" Grid.RowSpan="1"/>
 
-        <Image x:Name="ProfileIcon" Source="Default_Images/default_profile_icon.png" VerticalAlignment="Stretch" Grid.Column="0" Grid.Row="8" />
-        <Button x:Name="Profile" Click="Profile_Click_1" Grid.Column="0" Grid.Row="8" Content="" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
-        <Image x:Name="Logo" Source="Default_Images/budge1.jpg" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0"/>
+        <Image x:Name="ProfileIcon" Source="Default_Images/default_profile_icon.png" VerticalAlignment="Stretch" Grid.Column="0" Grid.Row="7" />
+        <Button x:Name="Profile" Click="Profile_Click_1" Grid.Column="0" Grid.Row="7" Content="" Background="Transparent" FontSize="20" VerticalAlignment="Stretch"/>
+        <Image x:Name="Logo" Source="Default_Images/budge1.jpg" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Margin="0,0,0,0" Grid.RowSpan="1"/>
 
-        <Rectangle x:Name="Members_Backbar" Grid.Row="1" Grid.Column="2" Fill="White" Grid.RowSpan="1"/>
+        <Rectangle x:Name="Members_Backbar" Grid.Row="1" Grid.Column="2" Fill="White" Grid.RowSpan="1" Margin="0,0.5,0.5,0.5"/>
+        <TextBlock x:Name="Example_User_Text" Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" Height="26" Margin="50,13.5,50.5,13.5" Width="185">Extend this (show all)</TextBlock>
 
     </Grid>
 </Page>
