--- a/leave_group.xaml
+++ b/leave_group.xaml
@@ -9,6 +9,6 @@
       Title="leave_group">
 
     <Grid>
-        
+        <Button x:Name="Leave" Click="Leave_Click" Grid.Column="0" Grid.Row="5" Content="Leave" Background="Transparent" FontSize="20" VerticalAlignment="Stretch" Margin="0,0,0,0" Grid.RowSpan="1"/>
     </Grid>
 </Page>
